fixed spacing on portal rows

--- a/staticfiles/dashboard/css/portal.css
+++ b/staticfiles/dashboard/css/portal.css
@@ -1,6 +1,6 @@
 #portal-top-row {
     padding-top: 1%;
-    height: 67%;
+    min-height: 67%;
     margin-bottom: 2%;
 }
 
